--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/cloud-resources.kyma-project.io_cloudresources.yaml
 - bases/cloud-resources.kyma-project.io_gcpvpcpeerings.yaml
+- bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_cloudresources.yaml
 #- patches/webhook_in_gcpvpcpeerings.yaml
+#- patches/webhook_in_azurevpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_cloudresources.yaml
 #- patches/cainjection_in_gcpvpcpeerings.yaml
+#- patches/cainjection_in_azurevpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
