--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_cloudresources.yaml
 - bases/cloud-resources.kyma-project.io_gcpvpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
+- bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_cloudresources.yaml
 #- patches/webhook_in_gcpvpcpeerings.yaml
 #- patches/webhook_in_azurevpcpeerings.yaml
+#- patches/webhook_in_awsvpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_cloudresources.yaml
 #- patches/cainjection_in_gcpvpcpeerings.yaml
 #- patches/cainjection_in_azurevpcpeerings.yaml
+#- patches/cainjection_in_awsvpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
