--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpvpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
+- bases/cloud-resources.kyma-project.io_nfsvolumes.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -15,6 +16,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_gcpvpcpeerings.yaml
 #- patches/webhook_in_azurevpcpeerings.yaml
 #- patches/webhook_in_awsvpcpeerings.yaml
+#- patches/webhook_in_nfsvolumes.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -23,6 +25,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_gcpvpcpeerings.yaml
 #- patches/cainjection_in_azurevpcpeerings.yaml
 #- patches/cainjection_in_awsvpcpeerings.yaml
+#- patches/cainjection_in_nfsvolumes.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
