--- a/config/samples/cloud-resources_v1beta1_nfsvolume.yaml
+++ b/config/samples/cloud-resources_v1beta1_nfsvolume.yaml
@@ -10,3 +10,6 @@ metadata:
   name: nfsvolume-sample
 spec:
   # TODO(user): Add fields here
+  capacity:
+    storage: 3Gi
+  reclaimPolicy: Retain
