--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpvpcpeerings.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpvpcpeerings.yaml
@@ -32,6 +32,17 @@ spec:
             type: string
           metadata:
             type: object
+          outcome:
+            properties:
+              data:
+                additionalProperties:
+                  type: string
+                type: object
+              message:
+                type: string
+              type:
+                type: string
+            type: object
           spec:
             description: GcpVpcPeeringSpec defines the desired state of GcpVpcPeering
             properties:
