--- a/config/crd/bases/cloud-resources.kyma-project.io_cloudresources.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_cloudresources.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.11.1
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.13.0
   name: cloudresources.cloud-resources.kyma-project.io
 spec:
   group: cloud-resources.kyma-project.io
@@ -13,7 +12,7 @@ spec:
     listKind: CloudResourcesList
     plural: cloudresources
     singular: cloudresources
-  scope: Cluster
+  scope: Namespaced
   versions:
   - name: v1beta1
     schema:
@@ -146,8 +145,6 @@ spec:
                                 of GcpVpcPeering
                               properties:
                                 remoteProject:
-                                  description: Foo is an example field of GcpVpcPeering.
-                                    Edit gcpvpcpeering_types.go to remove/update
                                   type: string
                                 remoteVpc:
                                   type: string
