--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
@@ -36,7 +36,7 @@ spec:
             properties:
               cidr:
                 type: string
-              kyma:
+              kymaName:
                 type: string
               scope:
                 properties:
@@ -47,7 +47,7 @@ spec:
                 type: object
             required:
             - cidr
-            - kyma
+            - kymaName
             type: object
           status:
             description: IpRangeStatus defines the observed state of IpRange
