--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
@@ -125,6 +125,10 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              ranges:
+                items:
+                  type: string
+                type: array
               state:
                 type: string
             type: object
