aws ip range create vpc cidr

--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
@@ -131,6 +131,21 @@ spec:
                 type: array
               state:
                 type: string
+              subnets:
+                items:
+                  properties:
+                    id:
+                      type: string
+                    range:
+                      type: string
+                    zone:
+                      type: string
+                  required:
+                  - id
+                  - range
+                  - zone
+                  type: object
+                type: array
             type: object
         type: object
     served: true
