--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_vpcpeerings.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_vpcpeerings.yaml
@@ -34,7 +34,7 @@ spec:
           spec:
             description: VpcPeeringSpec defines the desired state of VpcPeering
             properties:
-              kyma:
+              kymaName:
                 type: string
               remoteRef:
                 properties:
@@ -80,7 +80,7 @@ spec:
                     type: object
                 type: object
             required:
-            - kyma
+            - kymaName
             - remoteRef
             - vpcPeering
             type: object
