add cloud-resources group

--- a/components/kcp/config/samples/kustomization.yaml
+++ b/components/kcp/config/samples/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
 - cloud-control_v1beta1_vpcpeering.yaml
 - cloud-control_v1beta1_iprange.yaml
 - cloud-control_v1beta1_scope.yaml
+- cloud-resources_v1beta1_cloudresources.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
