--- a/components/kcp/config/crd/kustomization.yaml
+++ b/components/kcp/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/cloud-control.kyma-project.io_vpcpeerings.yaml
 - bases/cloud-control.kyma-project.io_ipranges.yaml
 - bases/cloud-control.kyma-project.io_scopes.yaml
+- bases/cloud-resources.kyma-project.io_cloudresources.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -15,6 +16,7 @@ patches:
 #- path: patches/webhook_in_cloud-control_vpcpeerings.yaml
 #- path: patches/webhook_in_cloud-control_ipranges.yaml
 #- path: patches/webhook_in_cloud-control_scopes.yaml
+#- path: patches/webhook_in_cloud-resources_cloudresources.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -23,6 +25,7 @@ patches:
 #- path: patches/cainjection_in_cloud-control_vpcpeerings.yaml
 #- path: patches/cainjection_in_cloud-control_ipranges.yaml
 #- path: patches/cainjection_in_cloud-control_scopes.yaml
+#- path: patches/cainjection_in_cloud-resources_cloudresources.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
