--- a/components/kcp/config/rbac/role.yaml
+++ b/components/kcp/config/rbac/role.yaml
@@ -82,3 +82,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - cloudresources
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - cloudresources/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - cloudresources/status
+  verbs:
+  - get
+  - patch
+  - update
