--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -3,7 +3,7 @@ run-name: ${{github.event.pull_request.title}}
 on: [ pull_request]
 jobs:
    build:
-     runs-on: ubuntu-latest
+     runs-on: golang:1.20
      steps:
      - name: checkout repo
        uses: actions/checkout@v3
