--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,14 +1,19 @@
 name: PR Checks
-run-name: ${{github.event.pull_request.title}}
-on: [ pull_request]
+run-name: '${{github.event.pull_request.title}}'
+'on':
+  - pull_request
 jobs:
-   build:
-     runs-on: golang:1.20
-     steps:
-     - name: checkout repo
-       uses: actions/checkout@v3
-     - name: build application
-       working-directory: components/kcp
-       run: make build
-     - name: check modified files
-       run: git diff --exit-code
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.20
+      - name: build application
+        working-directory: components/kcp
+        run: make build
+      - name: check modified files
+        run: git diff --exit-code
