--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.20
+      - name: go download
+        working-directory: components/kcp
+        run: go mod download
       - name: build application
         working-directory: components/kcp
         run: make build
