--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -11,7 +11,9 @@ jobs:
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
+      - name: Display Go version
+        run: go version
       - name: go download
         working-directory: components/kcp
         run: go mod download
