--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
       - name: Display Go version
         run: go version
       - name: go download
