ip range skr reconciliation

--- a/components/kcp/config/crd/bases/cloud-control.kyma-project.io_ipranges.yaml
+++ b/components/kcp/config/crd/bases/cloud-control.kyma-project.io_ipranges.yaml
@@ -89,6 +89,8 @@ spec:
           status:
             description: IpRangeStatus defines the observed state of IpRange
             properties:
+              cidr:
+                type: string
               conditions:
                 description: List of status conditions to indicate the status of a
                   Peering.
