--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
@@ -4,20 +4,20 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: cloudresources.cloud-resources.kyma-project.io
+  name: awsnfsvolumes.cloud-resources.kyma-project.io
 spec:
   group: cloud-resources.kyma-project.io
   names:
-    kind: CloudResources
-    listKind: CloudResourcesList
-    plural: cloudresources
-    singular: cloudresources
+    kind: AwsNfsVolume
+    listKind: AwsNfsVolumeList
+    plural: awsnfsvolumes
+    singular: awsnfsvolume
   scope: Namespaced
   versions:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: CloudResources is the Schema for the cloudresources API
+        description: AwsNfsVolume is the Schema for the awsnfsvolumes API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -32,15 +32,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: CloudResourcesSpec defines the desired state of CloudResources
+            description: AwsNfsVolumeSpec defines the desired state of AwsNfsVolume
             properties:
               foo:
-                description: Foo is an example field of CloudResources. Edit cloudresources_types.go
+                description: Foo is an example field of AwsNfsVolume. Edit awsnfsvolume_types.go
                   to remove/update
                 type: string
             type: object
           status:
-            description: CloudResourcesStatus defines the observed state of CloudResources
+            description: AwsNfsVolumeStatus defines the observed state of AwsNfsVolume
             properties:
               conditions:
                 description: List of status conditions
@@ -114,8 +114,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              served:
-                type: string
             type: object
         type: object
     served: true
