--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
@@ -4,20 +4,20 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: cloudresources.cloud-resources.kyma-project.io
+  name: ipranges.cloud-resources.kyma-project.io
 spec:
   group: cloud-resources.kyma-project.io
   names:
-    kind: CloudResources
-    listKind: CloudResourcesList
-    plural: cloudresources
-    singular: cloudresources
+    kind: IpRange
+    listKind: IpRangeList
+    plural: ipranges
+    singular: iprange
   scope: Namespaced
   versions:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: CloudResources is the Schema for the cloudresources API
+        description: IpRange is the Schema for the ipranges API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -32,16 +32,18 @@ spec:
           metadata:
             type: object
           spec:
-            description: CloudResourcesSpec defines the desired state of CloudResources
+            description: IpRangeSpec defines the desired state of IpRange
             properties:
-              foo:
-                description: Foo is an example field of CloudResources. Edit cloudresources_types.go
-                  to remove/update
+              cidr:
                 type: string
+            required:
+            - cidr
             type: object
           status:
-            description: CloudResourcesStatus defines the observed state of CloudResources
+            description: IpRangeStatus defines the observed state of IpRange
             properties:
+              cidr:
+                type: string
               conditions:
                 description: List of status conditions
                 items:
@@ -114,8 +116,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              served:
-                type: string
             type: object
         type: object
     served: true
